--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ minima:
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 exclude:
   - Gemfile
   - Gemfile.lock
