--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
 title: Go Nimble
-author: GitHub User
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+author: Mark Brand
+email: mark@gonimble.nl
+description: "Agile product management done right"
 
 # social links
-twitter_username: jekyllrb
-github_username:  jekyll
-rss: rss
+#twitter_username:
+#github_username:
+#rss:
 #dribbble_username: jekyll
 #facebook_username: jekyll
 #flickr_username: jekyll
