Footer and text changes

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: "Agile product management done right"
 #facebook_username: jekyll
 #flickr_username: jekyll
 #instagram_username: jekyll
-#linkedin_username: jekyll
+linkedin_username: mrkbrnd
 #pinterest_username: jekyll
 #youtube_username: jekyll
 #googleplus_username: +jekyll
